--- a/foundry.toml
+++ b/foundry.toml
@@ -1,4 +1,9 @@
 [profile.default]
+evm_version = "cancun"
+solc_version = '0.8.26'
+optimizer_runs = 800
+via_ir = false
+ffi = true
 src = "src"
 out = "out"
 libs = ["lib"]
